[project]
name = "cerberus"
version = "0.1.0"
description = "Cross-repo invariant verifier for the zyplux organization"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "typer>=0.20",
]

[project.scripts]
cerberus = "cerberus.cli:app"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cerberus"
module-root = "src"
